--- a/_config.yml
+++ b/_config.yml
@@ -57,8 +57,12 @@ external_services:
 navbar_fixed: true
 footer_fixed: true
 search_enabled: true
-socials_in_search: true
-posts_in_search: true
+socials_in_search: false
+posts_in_search: false
+search_exclude_collections:
+  - books
+  - news
+  - teachings
 bib_search: true
 
 # Dimensions
