--- a/_config.yml
+++ b/_config.yml
@@ -56,14 +56,14 @@ external_services:
 
 navbar_fixed: true
 footer_fixed: true
-search_enabled: true
+search_enabled: false
 socials_in_search: false
 posts_in_search: false
 search_exclude_collections:
   - books
   - news
   - teachings
-bib_search: true
+bib_search: false
 
 # Dimensions
 max_width: 930px
